# attack-mapper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-attack-db.yml
attack_mapper/: __init__.py  attack_loader.py  build_db.py  cli.py  coverage.py  plugins.py  renderers.py  sigma_parser.py
attack_mapper/data/: attack_db.json
rules/: powershell_encoded.yml  scheduled_task.yml  web_shell.yml
sample/: coverage.json  coverage_heat.html  coverage_matrix.html  coverage_report.html  coverage_rows.html
tests/: fixtures.py  test_bug_regressions.py  test_coverage.py  test_html_output.py  test_plugins_filters.py
