[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-mapper"
version = "0.4.1"
description = "Map your Sigma detection rules onto the MITRE ATT&CK matrix and find coverage gaps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jose (JoseArgento)" }]
keywords = ["mitre", "att-ck", "sigma", "detection-engineering", "soc", "blue-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/JoseArgento/attack-mapper"
Repository = "https://github.com/JoseArgento/attack-mapper"
Issues = "https://github.com/JoseArgento/attack-mapper/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
attack-mapper = "attack_mapper.cli:main"

[tool.setuptools.packages.find]
include = ["attack_mapper*"]

[tool.setuptools.package-data]
attack_mapper = ["data/*.json"]
